fixed product card <link> not wraping the entire card

--- a/src/App.css
+++ b/src/App.css
@@ -20,4 +20,7 @@
     letter-spacing: 0.1em;
   }
 
+a{
+    color: black;
+}
 
