--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -58,8 +58,12 @@
 
 .img:hover{
   scale: 1.08;
-  z-index: 3;
   box-shadow: 20px 20px black;
+}
+
+.img:active{
+  transition: all 0.01s ease-in-out;
+  scale: 1.01;
 }
 
 
