--- a/src/Components/SearchPage.css
+++ b/src/Components/SearchPage.css
@@ -8,7 +8,8 @@
         display: flex;
         justify-content: center;
         padding: 10px;
-        font-size: larger;
+        font-size: 30px;
+        font-weight: 100;
     }
 }
 
@@ -19,15 +20,19 @@
 }
 
 .defualt-search-page{
+    min-height: 80vh;
+    font-size: 20px;
     p{
         display: flex;
         justify-content: center;
-        padding: 5rem;
-        font-size: larger;
+        padding: 5rem 5rem;
+        font-weight: bolder;
     } 
 }
 
 .no-item-page{
+    min-height: 80vh;
+    font-size: 20px;
     p{
         display: flex;
         justify-content: center;
@@ -38,9 +43,12 @@
 
 .search-box{
     display: flex;
+    padding: 0.5rem;
     form{
         display: flex;
+        min-width: 350px;
         justify-content:flex-end;
+        padding: 0.5rem;
     }
     input{
         color: black;
